[tool.poetry]
name = "boilerplate-medical-data-visualizer"
version = "0.1.0"
description = ""
authors = ["Camila Bodack"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
seaborn = "0.13.2"
pandas = "1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
